# Vulkanic

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  install.py
resources/shaders/: basic.frag  basic.vert  basic.vert.spv  hard_coded_triangle.frag  hard_coded_triangle.frag.spv  hard_coded_triangle.vert  hard_coded_triangle.vert.spv  hard_coded_triangle_frag.spv  hard_coded_triangle_vert.spv
src/: CMakeLists.txt  main.cpp
src/core/: viewport.cpp  viewport.hpp  window.cpp  window.hpp
src/miscellaneous/: exceptions.hpp  global_settings.hpp  stb_defines.hpp  vma_impl.cpp  vulkanic_literals.hpp
src/renderer/: renderer.cpp  renderer.hpp  vertex.cpp  vertex.hpp
src/renderer/memory_manager/: memory_block.cpp  memory_block.hpp  memory_chunk.cpp  memory_chunk.hpp  memory_manager.cpp  memory_manager.hpp  virtual_buffer.cpp  virtual_buffer.hpp
src/renderer/vulkan_wrapper/: vk_instance.cpp  vk_instance.hpp  vulkan_command_buffer.cpp  vulkan_command_buffer.hpp  vulkan_command_pool.cpp  vulkan_command_pool.hpp  vulkan_debug_messenger.cpp  vulkan_debug_messenger.hpp  vulkan_device.cpp  vulkan_device.hpp  vulkan_enums.hpp  vulkan_functions.hpp  vulkan_gpu_memory_manager.cpp  vulkan_gpu_memory_manager.hpp  vulkan_index_buffer.cpp  vulkan_index_buffer.hpp  vulkan_instance.cpp  vulkan_instance.hpp  vulkan_pipeline.cpp  vulkan_pipeline.hpp  vulkan_pipeline_info.hpp  vulkan_render_pass.cpp  vulkan_render_pass.hpp  vulkan_shader.cpp  vulkan_shader.hpp  vulkan_structures.hpp  vulkan_swapchain.cpp  vulkan_swapchain.hpp  vulkan_texture.cpp  vulkan_texture.hpp  vulkan_texture_sampler.cpp  vulkan_texture_sampler.hpp  vulkan_uniform_buffer.cpp  vulkan_uniform_buffer.hpp  vulkan_utility.hpp  vulkan_vertex_buffer.cpp  vulkan_vertex_buffer.hpp
